Fixed the gap in section-1 at 200px

--- a/public/style.css
+++ b/public/style.css
@@ -9,16 +9,24 @@
 }
 
 .section-1 {
-  background: linear-gradient(90deg, rgb(34, 89, 50) 0%, rgb(12, 53, 35) 50%, rgb(34, 89, 50) 100%);
+  background: linear-gradient(
+    90deg,
+    rgb(34, 89, 50) 0%,
+    rgb(12, 53, 35) 50%,
+    rgb(34, 89, 50) 100%
+  );
   padding: 30px;
+  padding-right: 50px;
+  padding-left: 50px;
   width: 100%;
   /* height:100svh; */
 }
 .section-1 .banner {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 200px;
 }
 .section-1 .banner .left-span {
   color: rgb(251, 240, 224);
